Modificación en textos del registro y trabajo base en js

--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
             </div>
             <!-- Grupo Contraseña -->
             <div class="formulario__grupo" id="grupo__password">
-                <label for="campoPassword" class="formulario__label">Usuario de preferencia</label>
+                <label for="campoPassword" class="formulario__label">Contraseña</label>
                 <div>
                     <input type="password" class="formulario__input" id="campoPassword" name="campoPassword"
                         placeholder="Ingrese una contraseña" required>
@@ -46,7 +46,7 @@
             </div>
             <!-- Grupo Telefono -->
             <div class="formulario__grupo" id="grupo__telefono">
-                <label for="campoTelefono" class="formulario__label">Telefono de contacto</label>
+                <label for="campoTelefono" class="formulario__label">Teléfono de contacto</label>
                 <div>
                     <input type="text" class="formulario__input" id="campoTelefono" name="campoTelefono"
                         placeholder="123 4567" required>
@@ -60,7 +60,7 @@
                 <label for="campoDireccion" class="formulario__label">Dirección de residencia</label>
                 <div>
                     <input type="text" class="formulario__input" id="campoDireccion" name="campoDireccion"
-                        placeholder="Ingrese dirección de residencia" required>
+                        placeholder="Ingrese su dirección de residencia" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La dirección como minimo de tener 7 caracteres y como máximo 30.
@@ -68,7 +68,7 @@
             </div>
             <!-- Grupo Email -->
             <div class="formulario__grupo" id="grupo__email">
-                <label for="campoEmail" class="formulario__label">Correo electronico</label>
+                <label for="campoEmail" class="formulario__label">Correo electrónico</label>
                 <div>
                     <input type="email" class="formulario__input" id="campoEmail" name="campoEmail"
                         placeholder="Ingrese un email valido" required>
@@ -79,10 +79,10 @@
             </div>
             <!-- Grupo Rectificador Email -->
             <div class="formulario__grupo" id="grupo__email2">
-                <label for="campoEmail2" class="formulario__label">Confirme su Correo electronico</label>
+                <label for="campoEmail2" class="formulario__label">Confirme su Correo electrónico</label>
                 <div>
                     <input type="email" class="formulario__input" id="campoEmail2" name="campoEmail2"
-                        placeholder="Digite el email anterior" required>
+                        placeholder="Digite el mismo email anterior" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">Ambos correos deben ser iguales.</p>
@@ -92,7 +92,7 @@
             <div class="formulario__grupo" id="grupo__terminos">
                 <label class="formulario__label">
                     <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
-                    Acepto los Terminos y Condiciones
+                    Acepto los Términos y Condiciones
                 </label>
             </div>
             <div class="formulario__mensaje" id="formulario__mensaje">
