--- a/registro.html
+++ b/registro.html
@@ -111,7 +111,7 @@
         </button>
     </main>
 
-    <script src="./js/validaciones.js"></script>
+    <script src="./js/form3.js"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
 </body>
